--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
+    <script src="/index.js"></script>
+    </link>
     <title>Document</title>
 </head>
+
 <body>
-    
+<header>
+    <nav>
+        <ul class="menu-list">
+            <li class="menu-item first">
+                <p>Music Playlist Mover</p>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-link">Home</a>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-link">About</a>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-link">Contact</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<content>
+    <div class="main-content">
+        <h5 class="welcome-header">
+            Welcome to our online service for converting playlists from YouTube Music to Spotify!
+        </h5>
+        <p class="description">
+            Our Playlist Mover offers an easy and convenient way to transfer your beloved music from YouTube Music
+            to
+            Spotify
+        </p>
+        <button id="start-button" onclick="startClicked()">Start Converting</button>
+    </div>
+</content>
 </body>
+
 </html>
