added file contents to the index

--- a/client/pages/transfer.html
+++ b/client/pages/transfer.html
@@ -10,6 +10,6 @@
     <div class="tr-container">
       <button id="load-tracks">Click me</button>
     </div>
-    <script src="transfer.js" type="module"></script>
+    <script src="../scripts/transfer.js" type="module"></script>
   </body>
 </html>
