--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/index.css" />
-    <link
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="styles/index.css"/>
+  <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Outfit"
-    />
-    <title>Document</title>
-  </head>
+  />
+  <title>Music Playlist Mover</title>
+</head>
 
-  <body>
-    <header>
-      <nav>
-        <ul class="menu-list">
-          <li class="menu-item first">
-            <p>Music Playlist Mover</p>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">Home</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">About</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <div class="main-content">
-        <h5 class="welcome-header">
-          Welcome to our online service for converting playlists from YouTube
-          Music to Spotify!
-        </h5>
-        <p class="description">
-          Our Playlist Mover offers an easy and convenient way to transfer your
-          beloved music from YouTube Music to Spotify
-        </p>
-        <button id="start-button">Start Converting</button>
-      </div>
-    </main>
-    <script src="app.js" type="module"></script>
-  </body>
+<body class="home-body">
+<header>
+  <nav>
+    <ul class="menu-list">
+      <li class="menu-item first">
+        <p>Music Playlist Mover</p>
+      </li>
+      <li class="menu-item">
+        <a href="#" class="menu-link">Home</a>
+      </li>
+      <li class="menu-item">
+        <a href="#" class="menu-link">About</a>
+      </li>
+      <li class="menu-item">
+        <a href="#" class="menu-link">Contact</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+<main>
+  <div class="main-content">
+    <h5 class="welcome-header">
+      Welcome to our online service for converting playlists from YouTube
+      Music to Spotify!
+    </h5>
+    <p class="description">
+      Our Playlist Mover offers an easy and convenient way to transfer your
+      beloved music from YouTube Music to Spotify
+    </p>
+    <button id="start-button">Start Converting</button>
+  </div>
+</main>
+<script src="../scripts/index.js" type="module"></script>
+</body>
 </html>
