added contact page reference

--- a/client/pages/youtube-music.html
+++ b/client/pages/youtube-music.html
@@ -27,7 +27,7 @@
         <a href="#" class="menu-link">About</a>
       </li>
       <li class="menu-item">
-        <a href="#" class="menu-link">Contact</a>
+        <a href="../pages/contact.html" class="menu-link">Contact</a>
       </li>
     </ul>
   </nav>
